<resources>
    <string name="app_name">Catálogo de Música</string>
    <string name="action_save">Guardar Cambios</string>
    <string name="action_edit">Editar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_music_list">MusicListActivity</string>
    <string name="title_music_activity">Información del Álbum</string>

    <!-- Strings used for content music -->
    <string name="textView_album">Álbum:</string>
    <string name="textView_nameSong">Canción:</string>
    <string name="textView_author">Autor:</string>
    <string name="textView_composer">Compositor:</string>
    <string name="textView_gender">Género Musical:</string>
    <string name="textView_date">Fecha de Publicación:</string>
    <string name="textView_link">Reproducir:</string>
    <string name="button_video">Youtube</string>
</resources>