<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/textView_album"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00243c"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_album_name"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="45dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#003356"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textView_nameSong"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00243c"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/text_album_name"
            app:layout_constraintStart_toStartOf="@+id/text_album_name"
            app:layout_constraintTop_toBottomOf="@+id/text_album_name" />

        <Spinner
            android:id="@+id/spinner_songs"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textView_author"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00243c"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_songs" />

        <EditText
            android:id="@+id/text_song_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="45dp"
            android:textColor="#003356"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textView_composer"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00243c"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_song_author" />

        <EditText
            android:id="@+id/text_song_composer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="45dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#003356"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textView_gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00243c"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/text_song_composer"
            app:layout_constraintStart_toStartOf="@+id/text_song_composer"
            app:layout_constraintTop_toBottomOf="@+id/text_song_composer" />

        <EditText
            android:id="@+id/text_song_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="45dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#003356"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textView_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00243c"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/text_song_gender"
            app:layout_constraintStart_toStartOf="@+id/text_song_gender"
            app:layout_constraintTop_toBottomOf="@+id/text_song_gender" />

        <EditText
            android:id="@+id/text_song_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="45dp"
            android:textColor="#003356"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView_url"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textView_link"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00243c"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/text_song_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_song_date"
            app:layout_constraintTop_toBottomOf="@+id/text_song_date" />

        <EditText
            android:id="@+id/text_song_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="#003356"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/textView_url"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView_url"
            app:layout_constraintTop_toBottomOf="@+id/textView_url" />

        <Button
            android:id="@+id/button_view_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#002F62"
            android:text="@string/button_video"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:cornerRadius="14dp"
            app:icon="@android:drawable/ic_menu_slideshow"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_song_url"
            app:layout_constraintStart_toStartOf="@+id/text_song_url"
            app:layout_constraintTop_toBottomOf="@+id/textView_url" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>